--- a/package.json
+++ b/package.json
@@ -41,9 +41,13 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "autoprefixer": "^10.4.7",
+    "babel-jest": "^29.3.1",
     "jest": "^29.3.1",
     "postcss": "^8.4.14",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.1.6"
   }
 }
